# multirobot-environment

./: turtlebot3_burger.urdf.xacro
go2_description/: package.xml
go2_description/launch/: display.launch.py  gpt_launch.launch.py  ignition_xacro_2.launch.py  robot_state_publisher.launch.py  rviz_urdf.launch.py  spawn_robot.launch.py
go2_description/urdf/: a.urdf  go2_description.urdf.xacro
go2_description/worlds/: home1.world
multi_robot/: CMakeLists.txt  package.xml
multi_robot/env-hooks/: multi_robot.dsv.in
multi_robot/launch/: base.launch.py  gazebo_multi_nav2_world.launch.py  gazebo_multi_world.launch.py
multi_robot/models/turtlebot3_burger/: model_camera.sdf
multi_robot/models/turtlebot3_waffle_pi/: model.sdf
multi_robot/models/turtlebot3_waffle_pi_manipulator/: model.sdf
multi_robot/params/: nav2_params.yaml
multi_robot/urdf/: combined_robot.urdf  turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
multi_robot_spawner/: CMakeLists.txt  package.xml
multi_robot_spawner/launch/: empty_world.launch.py  multi_spawn_ignition.launch.py  robot_state_publisher.launch.py  spawn_robots.launch.py  world.launch.py
multi_robot_spawner/worlds/: empty.sdf  fws_robot_world.sdf
multirobot-environment/: turtlebot3_burger.urdf  turtlebot3_burger.urdf.xacro
multirobot-environment/go2_description/: CMakeLists.txt
multirobot-environment/go2_description/config/: ros2_control.yaml
multirobot-environment/go2_description/launch/: emptry_world.launch.py  ignition.launch.py  ignition_xacro.launch.py  robot.launch.py  robot_state_pu.launch.py  rsp.launch.py  rviz.launch.py  rviz_xacro.launch.py
multirobot-environment/go2_description/rviz/: model.rviz
multirobot-environment/go2_description/urdf/: a.urdf.xacro
multirobot-environment/multi_robot_spawner/config/: config.rviz
multirobot-environment/multi_robot_spawner/launch/: multi_robot.launch.py  multi_spawn_gazebo.launch.py  robots_spawn.launch.py
multirobot-environment/multi_robot_spawner/urdf/: burger.urdf  go2.urdf
multirobot-environment/multi_robot_spawner/worlds/: empty.world
multirobot-environment/om_x_tb3_w_pi/: CMakeLists.txt
multirobot-environment/om_x_tb3_w_pi/launch/: gazebo.launch.py  gazebo2.launch.py  ignition.launch.py  rviz2.launch.py
multirobot-environment/om_x_tb3_w_pi/rviz/: combine.rviz  manipulator.rviz  model.rviz
multirobot-environment/om_x_tb3_w_pi/urdf/: combined_gazebo.urdf.xacro  combined_robot_xacro.urdf.xacro  open_manipulator_x.urdf  open_manipulator_x.urdf.xacro
multirobot-environment/turtlebot3_burger_description/: CMakeLists.txt  package.xml
multirobot-environment/turtlebot3_burger_description/config/: diffbot_controllers.yaml  ros2_diff_drive_controller.yaml
multirobot-environment/turtlebot3_burger_description/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
multirobot-environment/turtlebot3_burger_description/launch/: display.launch.py  emptry_world.launch.py  empty_world.launch.py  ignition_gazebo.launch.py  ignition_xacro.launch.py  robot_state_piblisher.launch.py  robotstatepublisher.launch.py  rviz.launch.py  spawn_robot.launch.py  spawn_turtlebot3.launch.py  state_publisher.launch.py
multirobot-environment/turtlebot3_burger_description/rviz/: model.rviz
multirobot-environment/turtlebot3_burger_description/src/: turtlebot3_drive.cpp
multirobot-environment/turtlebot3_burger_description/urdf/: a.urdf  turtlebot3_burger_xacro.urdf.xacro  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
multirobot-environment/two_robot_sim/config/: two_robots.rviz
multirobot-environment/two_robot_sim/urdf/: robot1.urdf  robot2.urdf
om_x_tb3_w_pi/: package.xml
om_x_tb3_w_pi/gazebo/: materials.xacro
om_x_tb3_w_pi/launch/: combined_rviz.launch.py  display.launch.py  ignition_xacro.launch.py  manipulator.launch.py  rviz.launch.py  rviz3.launch.py
om_x_tb3_w_pi/urdf/: combined_robot.urdf  combined_robot.urdf.xacro  open_manipulator_x_robot.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
turtlebot3_burger_description/config/: diff_drive.yaml
turtlebot3_burger_description/launch/: gazebo.launch.py  ignition.launch.py  rsp.launch.py  rviz2.launch.py  world.launch.py
turtlebot3_burger_description/launch/include/: control.py
turtlebot3_burger_description/urdf/: turtlebot3_burger.urdf
turtlebot3_burger_description/worlds/: crazy.sdf
two_robot_sim/: package.xml  setup.py
two_robot_sim/config/: two_robots.rviz
two_robot_sim/launch/: two_robot.launch.py
two_robot_sim/urdf/: robot1.urdf  robot2.urdf
